--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ server.port=8888
 #   默认配置最终都是映射到MultipartProperties
 #   配置文件的值最终会绑定某个类上，这个类会在容器中创建对象
 #springboot的所有自动配置功能都在spring-boot-autoconfigure中
+
+mycar.brand=BYD
+mycar.price=10000
